--- a/msvc/libgcmonosgen.targets.filters
+++ b/msvc/libgcmonosgen.targets.filters
@@ -1,89 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <ItemGroup>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-alloc.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-cardtable.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-debug.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-descriptor.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-fin-weak-hash.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-gc.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-gchandles.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-gray.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-hash-table.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-internal.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-layout-stats.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-los.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-marksweep.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-memory-governor.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-nursery-allocator.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-pinning.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-pinning-stats.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-pointer-queue.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-protocol.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-qsort.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-simple-nursery.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-split-nursery.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-thread-pool.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-workers.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-array-list.c">
-      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Label="monosgen_sources">
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\gc-internal-agnostic.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-alloc.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-archdep.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-cardtable.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-cardtable.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
@@ -96,30 +25,63 @@
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-copy-object.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-debug.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-descriptor.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-descriptor.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-fin-weak-hash.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-gc.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-gc.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-gchandles.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-gray.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-gray.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-hash-table.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-hash-table.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-internal.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-layout-stats.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-layout-stats.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-los.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-major-copy-object.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-marksweep-drain-gray-stack.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
-    <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-marksweep-scan-object-concurrent.h">
-      <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-marksweep.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-memory-governor.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-memory-governor.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
@@ -129,36 +91,74 @@
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-minor-scan-object.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-nursery-allocator.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-pinning-stats.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-pinning.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-pinning.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-pointer-queue.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-pointer-queue.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
-    <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-protocol.h">
+    <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-array-list.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-array-list.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-protocol-def.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-protocol.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-protocol.h">
+      <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-qsort.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-qsort.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-scan-object.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-simple-nursery.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-split-nursery.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-tagged-pointer.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-thread-pool.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-thread-pool.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
+    <ClCompile Include="$(MonoSourceLocation)\mono\sgen\sgen-workers.c">
+      <Filter>Source Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </ClCompile>
     <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-workers.h">
       <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
     </ClInclude>
-    <ClInclude Include="$(MonoSourceLocation)\mono\sgen\sgen-array-list.h">
-      <Filter>Header Files$(MonoGCsgenFilterSubFolder)</Filter>
-    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="$(MonoSourceLocation)\mono\sgen\Makefile.am">
+      <Filter>Resource Files$(MonoGCsgenFilterSubFolder)</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup Condition="'$(MonoGCsgenFilterSubFolder)'!=''">
     <Filter Include="Header Files$(MonoGCsgenFilterSubFolder)">
